Added notification feature when new user joins, users send messages and existing users leave

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     </div>
     <div class="send">
         <form action="#" id="send-container">
-            <input type="text" name="messageInp" id="messageInp">
+            <input type="text" autocomplete="off" name="messageInp" id="messageInp">
             <button class="btn" type="submit">Send</button>
         </form>
     </div>
     <div class="foot">
-        <h3>Made with ❤️ by Subrata Rudra</h3>
+        <h3>Made with ❤️ by <a href="https://github.com/Subrata-Rudra" target="_blank">Subrata Rudra</a></h3>
     </div>
 </body>
 </html>
